test/corpus/basic_tags.txt
==================
Test basic Pug tag
==================

div
----
(source_file
  (tag
    (tag_name)
  )
)

==================
Test Pug tag with inline text
==================

div Hello, world!
----
(source_file
  (tag
    (tag_name)
    (inline_text)
  )
)

==================
Test Pug tag with class
==================

div.main
----
(source_file
  (tag
    (tag_name)
    (class_or_id)
  )
)

==================
Test Pug tag with ID
==================

div#container
----
(source_file
  (tag
    (tag_name)
    (class_or_id)
  )
)

==================
Test Pug tag with quoted attributes
==================

div(class="main" id="header")
----
(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (quoted_attribute_value)
      )
      (attribute
        (attribute_name)
        (quoted_attribute_value)
      )
    )
  )
)

==================
Test Pug tag with unquoted attributes
==================

input(type=text name=username)
----
(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (unquoted_attribute_value)
      )
      (attribute
        (attribute_name)
        (unquoted_attribute_value)
      )
    )
  )
)

==================
Test tag with all elements
==================

div.main#container(class="content" id="header") Welcome to Pug!
----
(source_file
  (tag
    (tag_name)
    (class_or_id)
    (class_or_id)
    (attributes
      (attribute
        (attribute_name)
        (quoted_attribute_value)
      )
      (attribute
        (attribute_name)
        (quoted_attribute_value)
      )
    )
    (inline_text)
  )
)
