test/corpus/nested_tags.txt
==================
Test Simple Nested Tag
==================

div
  p
----
(source_file
  (tag
    (tag_name)
    (children
      (tag
        (tag_name)
      )
    )
  )
)

==================
Test Nested Tags with Attributes
==================

div(class="container")
  p(class="text")
----
(source_file
  (tag
    (tag_name)
    (attributes
      (attribute
        (attribute_name)
        (quoted_attribute_value))
    )
    (children
      (tag
        (tag_name)
        (attributes
          (attribute
            (attribute_name)
            (quoted_attribute_value))
          )
      )
    )
  )
)

==================
Test Nested Tags with Text Content
==================

div
  p This is a paragraph
----
(source_file
  (tag
    (tag_name)
    (children
      (tag
        (tag_name)
        (inline_text)
      )
    )
  )
)

==================
Test Multiple Children
==================

div
  p Paragraph 1
  p Paragraph 2
  p Paragraph 3

----
(source_file
  (tag
    (tag_name)
    (children
      (tag
        (tag_name)
        (inline_text)
      )
      (tag
        (tag_name)
        (inline_text)
      )
      (tag
        (tag_name)
        (inline_text)
      )
    )
  )
)

==================
Test Multiple Deeply Nested Tags
==================

div
  p Paragraph 1
  div
    p Paragraph 2
  p Paragraph 3
----
(source_file
  (tag
    (tag_name)
    (children
      (tag
        (tag_name)
        (inline_text)
      )
      (tag
        (tag_name)
        (children
          (tag
            (tag_name)
            (inline_text)
          )
        )
      )
      (tag
        (tag_name)
        (inline_text)
      )
    )
  )
)
